# provider-core

./: .coverage  .flake8  .gitignore  .tmp_create_org.graphql  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  NOTE.md  PROJECT_DECISIONS.md  README.md  config.toml  constraints.txt  docker-compose.yml  main.py  net.py  ollama_server.py  proxy.py  pyproject.toml  pytest.ini  qwen_accounts.py  qwen_client.py  qwen_login.py  qwen_server.py  qwen_util.py  record.md  requirements.txt
.agents/provider-guide/: SKILL.md
.agents/tmp/: TASK.txt  file_merger.py  gen_plan.py  gen_table.py  upload.txt  write_plan.py  zen_server.py
.backup/: command.txt
.github/workflows/: build-release.yml  ci.yml
.qoder/: settings.local.json
.qoder/hooks/: session-cleanup.py  session-cleanup.sh
config/: main_config.toml  webui_config.toml
docs/: entropy-api.openapi.yaml
docs-src/: INDEX.md  MISTAKES.md  docs-src-guide.md  tests-guide.md
docs-src/core/: ARCHITECTURE.md
docs-src/src/: INDEX.md
docs-src/template/: INDEX.md
docs-src/tests/: INDEX.md
plugins/Provider-Aitianhu2-Adapter/: _manifest.json.disabled  plugin.py
plugins/Provider-Apiairforce-Adapter/: _manifest.json.disabled  plugin.py
plugins/Provider-Azuretranslate-Adapter/: _manifest.json.disabled  plugin.py
plugins/Provider-Caiyuesbk-Adapter/: _manifest.json.disabled  plugin.py
plugins/Provider-Cerebras-Adapter/: _manifest.json.disabled  accounts.py.example  plugin.py
plugins/Provider-Chatmoe-Adapter/: _manifest.json  plugin.py
plugins/Provider-Chutes-Adapter/: _manifest.json.disabled  plugin.py
plugins/Provider-Codebuddy-Adapter/: _manifest.json.disabled  accounts.py.example  plugin.py
plugins/Provider-Coplan-Util/: .gitignore  _manifest.json  plugin.py  pyproject.toml
plugins/Provider-Cursor-Adapter/: .gitignore  _manifest.json.disabled  plugin.py
plugins/Provider-Deepl-Adapter/: _manifest.json.disabled  plugin.py
plugins/Provider-Deepseek-Adapter/: _manifest.json.disabled  plugin.py
plugins/Provider-Edgetts-Adapter/: _manifest.json  plugin.py
plugins/Provider-Fncall-Util/: _manifest.json  plugin.py  pyproject.toml
plugins/Provider-Googletranslate-Adapter/: _manifest.json.disabled  plugin.py
plugins/Provider-Gtts-Adapter/: _manifest.json  plugin.py
plugins/Provider-N1n-Adapter/: _manifest.json.disabled  plugin.py
plugins/Provider-Noobkeys-Adapter/: _manifest.json.disabled  accounts.py.example  plugin.py
plugins/Provider-Nvidia-Adapter/: .gitignore  _manifest.json.disabled  plugin.py
plugins/Provider-Ollama-Adapter/: _manifest.json  plugin.py
plugins/Provider-Openaifm-Adapter/: _manifest.json  plugin.py
plugins/Provider-Opencode-Adapter/: _manifest.json.disabled  accounts.py.example  plugin.py
plugins/Provider-OpencodeZen-Adapter/: .gitignore  _manifest.json.disabled  plugin.py
plugins/Provider-Openrouter-Adapter/: _manifest.json.disabled  accounts.py.example  plugin.py
plugins/Provider-Perplexity-Adapter/: _manifest.json.disabled  plugin.py
plugins/Provider-Qwen-Adapter/: _manifest.json  accounts.py.example  plugin.py
plugins/Provider-Webui-Util/: .gitignore  _manifest.json  plugin.py  pyproject.toml
plugins/Provider-Yandextranslate-Adapter/: _manifest.json.disabled  plugin.py
plugins/Provider-Zen-Adapter/: _manifest.json  accounts.py.example  plugin.py
prompts/en-US/: .meta.toml  tts_default.prompt
prompts/ja-JP/: .meta.toml  tts_default.prompt
prompts/zh-CN/: .meta.toml  tts_default.prompt
script/: proxy.py  servers.py
script/ollama/: ollama_client.py  ollama_util.py
script/qwen/: qwen_accounts.py  qwen_client.py  qwen_example.py  qwen_login.py  qwen_util.py
scripts/: add_tests_ci.sh  audit_webui_i18n.py  check_banned_terms.py  check_i18n_keys.py  enable_platform_manifests.py  fix_dir_imports.py  fix_dir_restructure.py  fix_platform_plugins.py  fix_py_encoding.py  gen_plugin_details.py  init_plugin_repos.sh  merge_opencodezen.py  migrate_plugins_self_contained.py  patch_plugin_tests.py  provider_evo_scaffold.py  publish_provider_evo_org.ps1  publish_provider_evo_plugins.ps1  push_plugins_github.sh  refactor_files_router.py  remove_legacy_platforms.py  run_provider_evo_audit.py  set_platform_plugin_state.py  test_vision_models.py  write_files_common.py
scripts/webui/: build_webui_locales.py  i18n_validate_webui.py  patch_index_i18n_full.py  webui_i18n_extra.py
src/: __init__.py  logger.py  paths.py
src/bootstrap/: __init__.py  app_factory.py  life.py  lifecycle.py  plugin_routes.py  webui_bindings.py
src/core/: __init__.py  config.py  errors.py  gateway.py  http.py  http_errors.py  models_cache.py  registry.py  runtime_view.py  scriptgen.py  selector.py  server.py  terminal_sessions.py  tools.py  watcher.py
src/entropy/: __init__.py
src/foundation/: __init__.py  logger.py  paths.py  prompt_intl.py
src/routes/: __init__.py  anthropic.py  health.py  openai.py  openai_chat.py  static.py
src/webui/: __init__.py  app.py  config_schema.py  dependencies.py  logs_ws.py  models.py  page.py  routes.py  server.py
template/: template_config.toml  template_webui_config.toml
tests/: INDEX.md  conftest.py  test_plugin_admin_api.py  test_plugin_progress.py  test_plugin_routes.py  test_plugin_runtime.py
tests/helpers/: platform_contract.py
tests/scripts/: test_audit_webui_i18n.py  test_banned_terms.py  test_fix_py_encoding.py  test_i18n_validate_webui.py
tests/src/: test_logger.py
(+1103 files in other folders)
