[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "provider-guide"
version = "2.2.305"
description = "Unified AI model gateway aggregating 17+ platforms behind a single OpenAI/Anthropic-compatible API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "aiohttp>=3.9.0",
    "aiohttp-socks>=0.8.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "pycryptodome>=3.20.0",
    "loguru>=0.7.0",
    "tomlkit>=0.12.0",
    "watchdog>=4.0.0",
    "watchfiles>=0.21.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.7.0",
    "numpy>=1.21.0",
    "paramiko>=3.0.0",
    "echotools>=2.3.13",
    "provider-sdk>=0.3.4",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
deepseek = ["wasmtime>=0.40.0"]
cerebras = ["cerebras-cloud-sdk>=1.0.0"]
ssh = ["paramiko>=3.0.0"]
async-perf = ["uvloop>=0.22.1"]
all = [
    "provider-guide[deepseek,cerebras,ssh,async-perf]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
    "black>=26.3.1",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "pylint>=3.0.0",
]

[project.scripts]
provider = "main:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires network or external services",
    "platform: platform adapter contract tests",
]

[tool.coverage.run]
# 90% 门禁范围：可单元测试的核心业务模块（网关 dispatch/registry 由路由集成测试覆盖）
include = [
    "src/core/auth/*",
    "src/core/cache/*",
    "src/core/config/base.py",
    "src/core/config/resolver.py",
    "src/core/dispatch/candidate.py",
    "src/core/dispatch/circuit.py",
    "src/core/dispatch/fallback.py",
    "src/core/errors/*",
    "src/core/observability/*",
    "src/core/server/http/middleware.py",
    "src/core/server/http/rate_limit.py",
    "src/core/server/http/request_context.py",
    "src/core/server/http/auth/*",
    "src/core/server/plugins/hook_registry.py",
    "src/core/server/plugins/plugin_catalog.py",
    "src/core/utils/compat/models_cache.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312", "py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["src"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".claude", ".agents", "logs", "persist", "tmp"]

[tool.pylint.main]
py-version = "3.8"
jobs = 0
ignore-paths = ["^\\.claude/", "^\\.agents/", "^logs/", "^persist/", "^tmp/"]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.design]
max-args = 10
max-locals = 20
max-branches = 15
max-statements = 60
max-module-lines = 800

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "too-few-public-methods",
    "import-outside-toplevel",
]
